--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs my-5">
+<!-- <ul class="nav nav-tabs my-3">
   <li
     class="nav-item"
     routerLinkActive="active"
@@ -6,19 +6,56 @@
   >
     <a class="nav-link" [routerLink]="['/']">Home</a>
   </li>
+
   <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
     <a class="nav-link" [routerLink]="['/auth']">Auth</a>
   </li>
+
   <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated">
     <a class="nav-link" [routerLink]="['/users']">Users</a>
   </li>
+
+  <li class="nav-item" *ngIf="isAuthenticated">
+    <a class="nav-link" (click)="onLogout()" style="cursor: pointer">Logout</a>
+  </li>
+
   <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated">
-    <a class="nav-link" (click)="onLogout()">Logout</a>
+    <a class="nav-link" [routerLink]="['/add-activity']">Add New Activity</a>
   </li>
-  <li class="nav-item" routerLinkActive="active">
-    <a class="nav-link" [routerLink]="['/user-add']">Add New User</a>
+
+  <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
+    <a class="nav-link" [routerLink]="['/login']">Login</a>
   </li>
-  <li class="nav-item" routerLinkActive="active">
-    <a class="nav-link" [routerLink]="['/users']">Users</a>
+
+ 
+  <li class="nav-item ms-auto" *ngIf="isAuthenticated">
+    <span class="nav-link disabled">Welcome, {{ username }}</span>
   </li>
-</ul>
+</ul> -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold text-primary" routerLink="/">MyCalendar</a>
+
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li class="nav-item" *ngIf="!isAuthenticated">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item" *ngIf="!isAuthenticated">
+        <a class="nav-link" routerLink="/auth">Auth</a>
+      </li>
+      <li class="nav-item" *ngIf="isAuthenticated">
+        <a class="nav-link" routerLink="/users">Users</a>
+      </li>
+      <li class="nav-item" *ngIf="isAuthenticated">
+        <a class="nav-link" routerLink="/add-activity">+ Add Activity</a>
+      </li>
+      <li class="nav-item" *ngIf="isAuthenticated">
+        <a class="nav-link" (click)="onLogout()">Logout</a>
+      </li>
+      <li class="nav-item ms-3" *ngIf="isAuthenticated">
+        <span class="navbar-text fw-semibold">👋 {{ username }}</span>
+      </li>
+    </ul>
+  </div>
+</nav>
