--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,60 +1,25 @@
-<!-- <ul class="nav nav-tabs my-3">
-  <li
-    class="nav-item"
-    routerLinkActive="active"
-    [routerLinkActiveOptions]="{ exact: true }"
-  >
-    <a class="nav-link" [routerLink]="['/']">Home</a>
-  </li>
-
-  <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
-    <a class="nav-link" [routerLink]="['/auth']">Auth</a>
-  </li>
-
-  <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated">
-    <a class="nav-link" [routerLink]="['/users']">Users</a>
-  </li>
-
-  <li class="nav-item" *ngIf="isAuthenticated">
-    <a class="nav-link" (click)="onLogout()" style="cursor: pointer">Logout</a>
-  </li>
-
-  <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated">
-    <a class="nav-link" [routerLink]="['/add-activity']">Add New Activity</a>
-  </li>
-
-  <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
-    <a class="nav-link" [routerLink]="['/login']">Login</a>
-  </li>
-
- 
-  <li class="nav-item ms-auto" *ngIf="isAuthenticated">
-    <span class="nav-link disabled">Welcome, {{ username }}</span>
-  </li>
-</ul> -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold text-primary" routerLink="/">MyCalendar</a>
 
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/calendar">Calendar</a>
+      </li>
       <li class="nav-item" *ngIf="!isAuthenticated">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
       <li class="nav-item" *ngIf="!isAuthenticated">
-        <a class="nav-link" routerLink="/auth">Auth</a>
+        <a class="nav-link" routerLink="/signup">Signup</a>
       </li>
       <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" routerLink="/users">Users</a>
-      </li>
-      <li class="nav-item" *ngIf="isAuthenticated">
-        <a class="nav-link" routerLink="/add-activity">+ Add Activity</a>
+        <a class="nav-link" routerLink="/add-activity">Add Activity</a>
       </li>
       <li class="nav-item" *ngIf="isAuthenticated">
         <a class="nav-link" (click)="onLogout()">Logout</a>
       </li>
       <li class="nav-item ms-3" *ngIf="isAuthenticated">
-        <span class="navbar-text fw-semibold">👋 {{ username }}</span>
+        <span class="badge text-bg-info navbar-text fw-semibold">👋 {{ username }}</span>
       </li>
     </ul>
   </div>
