--- a/src/app/calendar/add-activity/add-activity.component.html
+++ b/src/app/calendar/add-activity/add-activity.component.html
@@ -1,5 +1,7 @@
-<div class="card p-3 mb-3">
-  <h5>Add New Activity</h5>
+<div class="card p-3 my-3">
+  <div class="card-header p-3">
+    <h5>Add New Activity</h5>
+  </div>
   <form [formGroup]="activityForm" (ngSubmit)="onSubmit()">
     <div class="mb-2">
       <label class="form-label">Title</label>
@@ -10,6 +12,7 @@
           activityForm.controls.title.touched
         "
         class="text-danger"
+        style="font-size: x-small;"
       >
         Title is required
       </div>
@@ -24,6 +27,7 @@
           activityForm.controls.startDate.touched
         "
         class="text-danger"
+        style="font-size: x-small;"
       >
         Start date is required
       </div>
@@ -38,6 +42,7 @@
           activityForm.controls.endDate.touched
         "
         class="text-danger"
+        style="font-size: x-small;"
       >
         End date is required
       </div>
@@ -47,6 +52,7 @@
           activityForm.controls.endDate.touched
         "
         class="text-danger"
+        style="font-size: x-small;"
       >
         End date cannot be before start date
       </div>
@@ -55,7 +61,7 @@
     <div class="mb-3">
       <label class="form-label">Status</label>
       <select class="form-select" formControlName="status">
-        <option *ngFor="let opt of statusOptions" [value]="opt.value">
+        <option *ngFor="let opt of statusOptions" [ngValue]="opt.value">
           {{ opt.label }}
         </option>
       </select>
