--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-5">
+<div class="container-fluid mb-5">
   <app-header></app-header>
   <router-outlet></router-outlet>
 </div>
